<resources>
    <string name="app_name">ZEIR</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="sync" translatable="false">Sync</string>
    <string name="action_log_out">Logging Out</string>
    <string name="powered_by" translatable="false">Powered by</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="done">Done</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="side_nav_add">Add new child</string>
    <string name="scan_card">Card Scanner</string>
    <string name="side_nav_out_of_catchment">Record out of catchment vaccination</string>
    <string name="nav_register">Register</string>
    <string name="show_password_text">Show password</string>
    <string name="app_version">App version: %1$s (built on %2$s)</string>
    <string name="login_text">Log In</string>
    <string name="log_out_text">Log Out</string>
    <string name="iz_id_hint">ZEIR ID</string>
    <string name="title_activity_child_immunization" translatable="false">ChildImmunizationActivity</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="reset_card">Reset card</string>
    <string name="logo_string">logo</string>
    <string name="all_registers">All Registers</string>
    <string name="vit_a_1">Vit A 1</string>
    <string name="vit_a_2">Vit A 2</string>
    <string name="create_reminder_label">Create BCG Repeated Dose reminder?</string>
    <string name="bcg_scar_not_present_label">Child does not have a BCG scar so BCG Repeated Dose is necessary.</string>
    <string name="bcg_scar_present_label">BCG scar is present so no BCG Repeated Dose is necessary.</string>
    <string name="ipv">IPV</string>
    <string name="bcg">BCG</string>
    <string name="due_only">Due Only</string>
    <string name="label_zeir">ZEIR ID</string>
    <string name="system_id_colon">ZEIR ID:</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="please_wait_message">Please wait</string>
    <string name="reports">Reports</string>
    <string name="str_page_info">Page %1$d of %2$d</string>
    <string name="dismiss_lookup">Confirm</string>
    <string name="fill_form_error_msg">Please register at least one service before saving</string>
    <string name="close">Close</string>
    <string name="tap_to_view">Tap to view</string>
    <string name="dhis2_reports">DHIS2 Reports</string>
    <string name="child_report_grouping_title">Child</string>
    <string name="hepb">HepB</string>
    <string name="opv_0">OPV 0</string>
    <string name="opv_1">OPV 1</string>
    <string name="pcv_1">PCV 1</string>
    <string name="penta_1">Penta 1</string>
    <string name="rota_1">Rota 1</string>
    <string name="opv_2">OPV 2</string>
    <string name="pcv_2">PCV 2</string>
    <string name="penta_2">Penta 2</string>
    <string name="rota_2">Rota 2</string>
    <string name="opv_3">OPV 3</string>
    <string name="pcv_3">PCV 3</string>
    <string name="penta_3">Penta 3</string>
    <string name="meningococcal">Meningococcal</string>
    <string name="yellow_fever">Yellow Fever</string>
    <string name="mr_1">MR 1</string>
    <string name="mr_2">MR 2</string>
    <string name="search_hint">Search Register</string>
    <string name="supported_by">Supported by</string>
    <string name="child_birth_registration_number">Child\'s birth registration number</string>
    <string name="child_unique_id">Child\'s birth certificate number</string>
    <string name="child_first_name">Child\'s first name</string>
    <string name="child_last_name">Child\'s last name</string>
    <string name="dob_range">Child\'s date of birth (range)</string>
    <string name="mother_caregiver_first_name">"Mother/caregiver first name"</string>
    <string name="mother_first_name">"Mother first name"</string>
    <string name="mother_last_name">"Mother last name"</string>
    <string name="mother_caregiver_last_name">"Mother/caregiver last name"</string>
    <string name="mother_caregiver_phone">Mother/caregiver\'s phone number</string>
    <string name="father_phone">Father phone number</string>
    <string name="mother_dob">Mother date of birth</string>
    <string name="mother_nationality">Mother/Caregiver nationality</string>
    <string name="mother_nationality_other">"Indicate Mother/caregiver nationality "</string>
    <string name="mother_caregiver_alt_phone">"Mother/Caregiver other phone "</string>
    <string name="mother_tdv_doses">"Mother Td vaccine doses "</string>
    <string name="mother_rubella">"Mother received Rubella vaccine  "</string>
    <string name="child_DOB">Date of birth</string>
    <string name="mother_name">M/CG: %1$s</string>
    <string name="adverse_effects">Adverse Effects</string>
    <string name="first_birth">Mother\'s first birth</string>
    <string name="rubella_serology">Mother received Rubella Serology test</string>
    <string name="serology_results">Serology test result</string>
    <string name="maximum_extra_vaccines_reached">You can only record a maximum of 10 vaccines</string>
    <string name="sms_recipient">Vaccines  SMS reminder recipient</string>
    <string name="monthly_immunization_growth_monitoring_reports">Immunization and Growth Monitoring Monthly Reports</string>
    <string name="at_birth_vaccines_bcg">Children who received BCG within 24 hrs of birth</string>
    <string name="at_birth_vaccines_bcg_2_59days">Children aged 2–59 days who received the BCG Vaccine</string>
    <string name="bcg_total">Total number of children of all ages who received BCG vaccine at the facility</string>
    <string name="at_birth_vaccines_hep_b_0_0_24hrs">Children aged 0–24hrs who received Hep B 0 vaccine</string>
    <string name="at_birth_vaccines_hep_b_0_2_59days">Children aged 2–59 days who received Hep B 0 vaccine</string>
    <string name="hepb_0_total">Total number of children of all ages who received Hep B 0 vaccine at the facility</string>
    <string name="penta1_grp_penta1_2_6mnths">Children aged 2–6 months who received Penta1, IPV1 and PCV1 vaccine</string>
    <string name="penta1_grp_penta1_7_11mnths">Children aged 7–11 months who received Penta1, IPV1 and PCV1 vaccines</string>
    <string name="penta1_grp_penta1_12_17mnths">Children aged 12–17 months who received Penta1, IPV1 and PCV1 vaccines</string>
    <string name="penta1_grp_penta1_18_23mnths">Children aged 18 -23months who received Penta1, IPV1 and PCV1 vaccines</string>
    <string name="penta1_grp_penta1_24_59mnths">Children aged 24 -59 months who received Penta1, IPV1 and PCV1 vaccine</string>
    <string name="penta1_total">Total number of children of all ages who received Penta1, IPV1 and PCV1 vaccines</string>
    <string name="penta2_grp_penta2_2_6mnths">Children aged 2–6 months who received Penta2 and IPV2 vaccines</string>
    <string name="penta2_grp_penta2_7_11mnths">Children aged 7–11 months who received Penta2 and IPV2 vaccines</string>
    <string name="penta2_grp_penta2_12_17mnths">Children aged 12–17 months who received Penta2 and IPV2 vaccines</string>
    <string name="penta2_grp_penta2_18_23mnths">Children aged 18 -23months who received Penta2 and IPV2 vaccines</string>
    <string name="penta2_grp_penta2_24_59mnths">Children aged 24 -59 months who received Penta2 and IPV2 vaccine</string>
    <string name="penta2_total">Total number of children of all ages who received Penta2 and IPV2 vaccines</string>
    <string name="at_birth_vaccines_pcv_2_2_6mnths">Children aged 2–6 months who received PCV2 vaccine</string>
    <string name="at_birth_vaccines_pcv_2_7_11mnths">Children aged 7–11 months who received PCV2 vaccine</string>
    <string name="at_birth_vaccines_pcv_2_12_17mnths">Children aged 12–17 months who received PCV2 vaccine</string>
    <string name="at_birth_vaccines_pcv_2_18_23mnths">Children aged 18 -23months who received PCV2 vaccine</string>
    <string name="at_birth_vaccines_pcv_2_24_59mnths">Children aged 24 -59 months who received PCV2 vaccine</string>
    <string name="pcv2_total">Total number of children of all ages who received  PCV2  vaccine</string>
    <string name="penta3_grp_penta3_2_6mnths">Children aged 2–6 months who received Penta 3 and OPV1 vaccines</string>
    <string name="penta3_grp_penta3_7_11mnths">Children aged 7–11 months who received Penta 3 and OPV1 vaccines</string>
    <string name="penta3_grp_penta3_12_17mnths">Children aged 12–17 months who received Penta 3 and OPV1 vaccines</string>
    <string name="penta3_grp_penta3_18_23mnths">Children aged 18 -23months who received Penta 3 and OPV1 vaccines</string>
    <string name="penta3_grp_penta3_24_59mnths">Children aged 24 -59 months who received Penta 3 and OPV1 vaccine</string>
    <string name="penta3_total">Total number of children of all ages who received Penta 3 and OPV1  vaccines</string>
    <string name="at_birth_vaccines_pcv_3_7_11mnths">Children aged 7–11 months who received PCV3 vaccine</string>
    <string name="at_birth_vaccines_pcv_3_12_17mnths">Children aged 12–17 months who received PCV3 vaccine</string>
    <string name="at_birth_vaccines_pcv_3_18_23mnths">Children aged 18 -23months who received PCV3 vaccine</string>
    <string name="at_birth_vaccines_pcv_3_24_59mnths">Children aged 24 -59 months who received PCV3 vaccine</string>
    <string name="pcv3_total">Total number of children of all ages who received  PCV3 vaccine</string>
    <string name="at_birth_vaccines_mr_1_12_17mnths">Children aged 12–17 months who received MR1 vaccine</string>
    <string name="at_birth_vaccines_mr_1_18_23mnths">Children aged 18 -23months who received MR1 vaccine</string>
    <string name="at_birth_vaccines_mr_1_24_59mnths">Children aged 24 -59 months who received MR1 vaccine</string>
    <string name="mr1_total">Total number of children of all ages who received  MR1vaccine</string>
    <string name="at_birth_vaccines_mr_2_18_23mnths">Children aged 18 -23months who received MR2 vaccine</string>
    <string name="at_birth_vaccines_mr_2_24_59mnths">Children aged 24 -59 months who received MR2 vaccine</string>
    <string name="mr2_total">Total number of children of all ages who received MR2 vaccine</string>
    <string name="at_birth_vaccines_dtp_4_18_23mnths">Children aged 18 -23months who received DTP4 vaccine</string>
    <string name="at_birth_vaccines_dtp_4_24_59mnths">Children aged 24 -59 months who received DTP4 vaccine</string>
    <string name="dtp4_total">Total number of children of all ages who received DTP4 vaccine</string>
    <string name="vaccine_doses_administered_vaccine_hep_b_0">Number of Hep B doses administered</string>
    <string name="vaccine_doses_administered_vaccine_bcg">Number of BCG doses administered</string>
    <string name="vaccine_doses_administered_opv">Number of OPV doses administered</string>
    <string name="vaccine_doses_administered_penta">Number of penta doses administered</string>
    <string name="vaccine_doses_administered_ipv">Number of  IPV doses administered</string>
    <string name="vaccine_doses_administered_pcv">Number of PCV doses administered</string>
    <string name="vaccine_doses_administered_mr">Number of MR doses administered</string>
    <string name="vaccine_doses_administered_vaccine_dtp_4">Number of dtp doses administered</string>
    <string name="vaccine_doses_administered_rubella">Number of Rubella doses administered</string>
    <string name="report_indicators_summary">Report Indicators Summary</string>
    <string name="report_indicators_form">Report Indicators Form</string>
    <string name="confirm_send_draft_reports">Confirm Send Draft Report</string>
    <string name="under_one_target">Under 1 target: %1$s</string>
    <string name="one_two_years_target">1–2 yrs target: %1$s</string>
    <string name="year_label">Year:</string>
</resources>