<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/report_appbar_background_color">

        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/annual_report_view_margin"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/year_label"
            android:textColor="@color/black_text_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/reportYearsSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/yearLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/underOneTargetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/annual_report_view_margin"
            android:padding="4dp"
            android:text="@string/under_one_target"
            android:textColor="@color/black_text_color"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/edit_icon"
            app:drawableTint="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/oneTwoYearsTargetTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/annual_report_view_margin"
            android:layout_marginBottom="16dp"
            android:padding="4dp"
            android:text="@string/one_two_years_target"
            android:textColor="@color/black_text_color"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/edit_icon"
            app:drawableTint="@color/dark_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/underOneTargetTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/annualCoverageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/annual_report_view_margin"
        android:layout_marginEnd="@dimen/annual_report_view_margin"
        android:layout_marginBottom="@dimen/annual_report_view_margin"
        android:layout_weight="1" />
</LinearLayout>
